overflow-x fix-2

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -2,7 +2,14 @@ $font-color: var(--color);
 :root {
   --color: aquamarine;
 }
-
+html {
+  overflow-x: hidden;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -75,6 +82,7 @@ body {
   align-items: center;
   text-transform: none;
   font-family: 'Mali', cursive;
+  overflow-x: hidden;
 }
 .use-middle {
   font-family: 'Mali', cursive;
@@ -251,6 +259,7 @@ label {
   grid-gap: 3em;
   grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
   padding-bottom: 3rem;
+  overflow-x: hidden;
 }
 
 .list-grid {
